# desktop

./: .gitignore  Cargo.toml  README.md  justfile
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  test.yml
components/: Cargo.toml
components/src/: body.rs  lib.rs  sidebar.rs  tabs.rs
icon/: Cargo.toml
icon/src/: bootstrap.rs  lib.rs
resources/packaging/linux/: app.desktop
resources/packaging/macos/: Info.plist  wrapper.sh
resources/packaging/macos/graphics/: app.icns
resources/packaging/windows/: setup.wxs
src/: app.rs  body.rs  configuration.rs  context.rs  errors.rs  lib.rs  main.rs  sidebar.rs  theme.rs  widget.rs
src/cmd/: actor.rs  config.rs  mod.rs  playbook.rs
src/components/: mod.rs  tabs.rs
src/detail/: envrionment.rs  inspect.rs  logs.rs  mod.rs  resources.rs  stats.rs
src/styles/: application.rs  button.rs  card.rs  checkbox.rs  constants.rs  container.rs  menu.rs  mod.rs  modal.rs  rule.rs  scrollable.rs  split.rs  tab_bar.rs  text.rs  text_input.rs
src/util/: strings.rs
src/utils/: connection_status.rs  mod.rs  strings.rs  uploader.rs  watcher.rs
src/views/: body.rs  cast.rs  compose.rs  composer.rs  mod.rs  sidebar.rs
src/views/detail/: inspect.rs  logs.rs  mod.rs  stats.rs
src/widgets/: character_switcher.rs  context_switcher.rs  empty.rs  mod.rs  tabs.rs
src/widgets/lists/: character_item.rs  mod.rs  playbook_item.rs  sidebar_playbook_item.rs
src/widgets/switchers/: character_switcher.rs  context_switcher.rs  mod.rs
