[package]
name = "desktop"
version = "0.3.7"
edition = "2021"

[[bin]]
name = "amphitheatre-desktop"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.78"
amp-client = { git = "https://github.com/amphitheatre-app/amp-client-rust", tag="v0.6.0" }
amp-common = { git = "https://github.com/amphitheatre-app/common", tag="v0.6.0" }
confy = "0.5.1"
futures = "0.3"
once_cell = "1.15"
iced = { version = "0.10.0", features = ["tokio", "debug", "lazy"] }
iced_aw = { version = "0.7.0" }
iced_futures = "0.7.0"
ignore = "0.4.21"
native-dialog = { version = "0.7.0", features = ["windows_dpi_awareness", "windows_visual_styles"] }
notify = "6.1.1"
rand = "0.8.5"
reqwest-eventsource = "0.5.0"
thiserror = "1.0"
time = { version = "0.3.5", features = ["local-offset"] }
toml = "0.8"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde_json = "1.0.108"
