[package]
name = "desktop"
version = "0.6.2"
edition = "2021"

[[bin]]
name = "amphitheatre-desktop"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amp-client = { git = "https://github.com/amphitheatre-app/amp-client-rust", tag = "v0.7.7" }
amp-common = { git = "https://github.com/amphitheatre-app/common", tag = "v0.7.8" }

anyhow = "1.0.80"
confy = "0.6.0"
futures = "0.3"
iced = { version = "0.10.0", features = ["tokio", "debug", "lazy"] }
iced_aw = { version = "0.7.0" }
iced_futures = "0.7.0"
ignore = "0.4.22"
native-dialog = { version = "0.7.0", features = ["windows_dpi_awareness", "windows_visual_styles"] }
notify = "6.1.1"
once_cell = "1.15"
rand = "0.8.5"
reqwest-eventsource = "0.5.0"
serde_json = "1.0.113"
tar = "0.4.40"
thiserror = "1.0"
time = { version = "0.3.34", features = ["local-offset"] }
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
